# UR3e_Handover_Vision

./: .gitmodules  README.md
chat_history/: 2025-12-6-chat-bk1.md  2025-12-6-chat-bk2.md  2025-12-6-chat-bk3.md  2025-12-6-chat-bk4.md
src/calibration_result/: package.xml  setup.cfg  setup.py
src/moveit_calibration/: 启动指南.md
src/vision_pick_and_place/: hsv_pick_and_place_eye_in_hand.py  hsv_real_time_tracking_cube.py  hsv_real_time_tracking_cube_eye_in_hand.py  hsv_real_time_tracking_cube_eye_in_hand_6d.py  package.xml  setup.cfg  setup.py
