<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration_result</name>
  <version>0.0.0</version>
  <description>Calibration results and launch files</description>
  <maintainer email="miao.zixiang@foxmail.com">Miao Zixiang</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
